--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <body>
     <header>
         <h1>MERN Internship Assignment 1</h1>
-        <h2>Name: Yash Verma</h2>
-        <h2>Registration No: 22BCE10374</h2>
+        <h2>Name: Aastha Vastani</h2>
+        <h2>Registration No: 22BSA10036</h2>
     </header>
 
     <main>
